{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 59,
  "lineage": "48b8455b-7e58-cca6-9ffc-fe3a5e894936",
  "resources": [
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:network-acl/acl-0e9ec506c126b4b3a",
            "default_network_acl_id": "acl-0e9ec506c126b4b3a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0e9ec506c126b4b3a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "476114152571",
            "subnet_ids": [],
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:route-table/rtb-09339d913bc7dff83",
            "default_route_table_id": "rtb-09339d913bc7dff83",
            "id": "rtb-09339d913bc7dff83",
            "owner_id": "476114152571",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:security-group/sg-0bd959566cd18c9d3",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0bd959566cd18c9d3",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "476114152571",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:internet-gateway/igw-0fd0d9ccac2f47798",
            "id": "igw-0fd0d9ccac2f47798",
            "owner_id": "476114152571",
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fd0d9ccac2f47798",
            "id": "r-rtb-0575135629d36426a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0575135629d36426a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_internet_gateway.this",
            "module.vpc_1.aws_route_table.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:route-table/rtb-0736558a87b208fd1",
            "id": "rtb-0736558a87b208fd1",
            "owner_id": "476114152571",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-private-eu-west-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:route-table/rtb-0f439d075cf11d917",
            "id": "rtb-0f439d075cf11d917",
            "owner_id": "476114152571",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-private-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-private-eu-west-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:route-table/rtb-0575135629d36426a",
            "id": "rtb-0575135629d36426a",
            "owner_id": "476114152571",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd0d9ccac2f47798",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ef7939d34eae6ac",
            "route_table_id": "rtb-0736558a87b208fd1",
            "subnet_id": "subnet-0445357e5bfd44dbe"
          },
          "dependencies": [
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_subnet.private",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e36fca38b5260b7f",
            "route_table_id": "rtb-0f439d075cf11d917",
            "subnet_id": "subnet-07b19278cfa2c9b48"
          },
          "dependencies": [
            "module.vpc_1.aws_route_table.private",
            "module.vpc_1.aws_subnet.private",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c0bbe0e393dc667",
            "route_table_id": "rtb-0575135629d36426a",
            "subnet_id": "subnet-0f35b56e57a3664e1"
          },
          "dependencies": [
            "module.vpc_1.aws_route_table.public",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0423d53b4e29146ac",
            "route_table_id": "rtb-0575135629d36426a",
            "subnet_id": "subnet-030db82fcc0fc62bd"
          },
          "dependencies": [
            "module.vpc_1.aws_route_table.public",
            "module.vpc_1.aws_subnet.public",
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:subnet/subnet-0445357e5bfd44dbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0445357e5bfd44dbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476114152571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-private-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-private-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:subnet/subnet-07b19278cfa2c9b48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b19278cfa2c9b48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476114152571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-private-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-private-eu-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:subnet/subnet-0f35b56e57a3664e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f35b56e57a3664e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476114152571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-public-eu-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-public-eu-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:subnet/subnet-030db82fcc0fc62bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-030db82fcc0fc62bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "476114152571",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-public-eu-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK-public-eu-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0e4393b1811ecc290"
          },
          "dependencies": [
            "module.vpc_1.aws_vpc.this",
            "module.vpc_1.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:476114152571:vpc/vpc-0e4393b1811ecc290",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e9ec506c126b4b3a",
            "default_route_table_id": "rtb-09339d913bc7dff83",
            "default_security_group_id": "sg-0bd959566cd18c9d3",
            "dhcp_options_id": "dopt-02fa1e38c92d103e9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4393b1811ecc290",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09339d913bc7dff83",
            "owner_id": "476114152571",
            "tags": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MS-CLEANING-SERVICE-NETWORK",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}